--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -5,7 +5,8 @@
 {% endblock extra_css %}
 
 {% block content %}
-<div class="rx-head-container">
+<div class="uk-child-width-expand@m" uk-grid>
+<div class="rx-head-container uk-margin-remove">
   <div class="rx-title-container" uk-sticky="offset: 80">
     <ul class="rx-breadcrumb">
       <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
@@ -20,61 +21,144 @@
     <input class="uk-search-input" type="search" placeholder="Search this volume...">
   </form>
 </div>
+</div>
 {% endblock content %}
 
 {% block viewer %}
-  <div class='uk-flex' uk-grid>
-    <div class='uk-width-3-4'>
-      <div id='viewer'></div>
-    </div>
-    <div class='uk-width-1-4'>
-      <div class='uk-padding'>
-        <b>Author:</b> {{ volume.author }}
-        <br />
-        <b>Publication Date:</b> {{ volume.published_date }}
-        <br />{% for col in volume.collections.all %}
-        <b>Collection:</b> <a class="nav-link" href="{% url 'collection' col.pid %}">{{ col.label }}</a>
-        <br />{% endfor %}
-        <b>Publisher:</b> {{ volume.published_city }} : {{ volume.publisher }}
-        <ul>
-          {% for note in volume.note_set.all %}
-          <li>
-            {{ note.label }}
-          </li>
-          {% endfor %}
-        </ul>
-        <br />
-        <b>Manifest URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}</a>
-        <br />{% for col in volume.collections.all %}
-        <b>Collection Manifest URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}</a>
-        <br />{% endfor %}
-        <br />
-        <b>View PDF:</b> <a href="{{volume.pdf}}" target="_blank">Click to view volume PDF</a>
-        <br />
-        <br />
-        <b>Export Citation:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'ris' volume.pid %}" target="_blank">Click to download RIS file</a>
-        <br />
-        <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}</a>
-        <br />
-        <b>Canvas URL:</b> <span class="link" id="myLink"></span>
-        <br />
-        <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
-        <br />
-        {% if user_annotation_count > 0 %}
-        <form action="{% url 'export' volume.pid %}" class="button_to" method="GET"><div><input type="submit" value="Export" title="Export in a variety of formats"/>{% csrf_token %}</div></form>
-        {% endif %}
-<!-- 
-        <p id="test"></p>
-        <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
-        <img src="https://www.cabq.gov/culturalservices/biopark/images/share-on-facebook.png/@@images/image.png" title="Facebook" alt="Facebook" ></a>
- -->
+  <div class="uk-container">
+
+    <div class="uk-grid-match" uk-grid>
+      <div class='uk-width-2-3@m'>
+        <div id='viewer'></div>
       </div>
+      <div class='uk-width-1-3@m'>
+        <div class='uk-padding uk-padding-remove-left'>
 
-      <!-- start ocr el -->
-      <div id='ocr' style='opacity: 0;'>
+          <div class="rx-info">
+            <div class="rx-info-title">Basic Information</div>
+            <div class="rx-info-content-container">
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Authors</div>
+                <div class="rx-info-content-value">{{ volume.author }}</div>
+              </div>
+              
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Publication Date</div>
+                <div class="rx-info-content-value">{{ volume.published_date }}</div>
+              </div>
+              
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Collections</div>
+                <div class="rx-info-content-value">
+                  {% for col in volume.collections.all %}
+                    <a class="nav-link" href="{% url 'collection' col.pid %}">{{ col.label }}</a>
+                  {% endfor %}
+                </div>
+              </div>
+              
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Publisher</div>
+                <div class="rx-info-content-value">{{ volume.published_city }} : {{ volume.publisher }}</div>
+              </div>
+              
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Notes</div>
+                <div class="rx-info-content-value">
+                  <ul>
+                    {% for note in volume.note_set.all %}
+                    <li>{{ note.label }}</li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              </div>
 
-  </div>
-      <!-- end ocr el -->
+            </div>
+          </div>
+
+          <div class="rx-info">
+            <div class="rx-info-title">Actions</div>
+            <div class="rx-info-content-container">
+              <div class="rx-info-content">
+                <a class="rx-action-btn" href="{{volume.pdf}}" target="_blank">View Volume PDF</a>
+              </div>
+              <div class="rx-info-content">
+                <a class="rx-action-btn" href="https://{{ request.META.HTTP_HOST }}{% url 'ris' volume.pid %}" target="_blank">Export Citation in RIS</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="rx-info">
+            <div class="rx-info-title">URLs</div>
+            <div class="rx-info-content-container">
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Manifest</div>
+                <div class="rx-info-content-value">
+                  <a href="https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}</a>
+                </div>
+              </div>
+
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Manifest</div>
+                <div class="rx-info-content-value">
+                  <a href="https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}"
+                    target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}</a>
+                </div>
+              </div>
+
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Collection Manifest</div>
+                <div class="rx-info-content-value">
+                  {% for col in volume.collections.all %}
+                    <a href="https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}"
+                      target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}</a>
+                  {% endfor %}
+                </div>
+              </div>
+
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Stable Volume</div>
+                <div class="rx-info-content-value">
+                  <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}"
+                    target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}</a>
+                </div>
+
+              </div>
+
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Canvas</div>
+                <div class="rx-info-content-value">
+                  <span class="link" id="myLink"></span>
+                </div>
+
+              </div>
+
+              <div class="rx-info-content">
+                <div class="rx-info-content-label">Stable Page</div>
+                <div class="rx-info-content-value">
+                  <span class="link" id="mySpan"></span>
+                  {% if user_annotation_count > 0 %}
+                  <form action="{% url 'export' volume.pid %}" class="button_to" method="GET">
+                    <div><input type="submit" value="Export" title="Export in a variety of formats" />{% csrf_token %}</div>
+                  </form>
+                  {% endif %}
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+<!-- 
+  <p id="test"></p>
+  <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
+  <img src="https://www.cabq.gov/culturalservices/biopark/images/share-on-facebook.png/@@images/image.png" title="Facebook" alt="Facebook" ></a>
+-->
+
+        </div>
+
+        <!-- start ocr el -->
+        <div id="ocr" style="opacity: 0;"></div>
+        <!-- end ocr el -->
+      </div>
     </div>
   </div>
 {% endblock viewer %}
