get new view to open to Mirador gallery as volume

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -19,18 +19,22 @@
   bottom: 0;
 }
 
+/* 
 .mirador-main-menu-bar,
 .manifest-info {
   display: none;
 }
+ */
 
 .mirador-container .mirador-viewer {
   top: 0 !important;
 }
 
+/* 
 .content-container {
   margin-top: 0 !important;
 }
+ */
 
 .uk-search-default {
   width: 95% !important;
