--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -67,6 +67,19 @@
 <h2>All Volumes</h2>
 <ol>
   {% for volume in page.volumes %}
+  {% if volume.canvas_set.first.pid is null %}
+    <li class="list">
+    <div><div id="grid"><div id="grid-image-volume">
+        <img src='{% static 'images/image_not_found.jpg' %}'/>
+      </div><div id="grid-metaforimage">
+      <p>
+      <p>{{ volume.label|truncatechars:200 }}</p>
+  Author: {{volume.author|truncatechars:150}}<br/>
+  Date Published: {{volume.published_date}}<br/>
+  Added {{volume.created_at}}</p></div>
+    </div></div>
+  </li>
+  {% else %}
   <li class="list">
     <div><div id="grid"><div id="grid-image-volume">
       <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
@@ -81,6 +94,7 @@
   Added {{volume.created_at}}</p></div>
     </div></div>
   </li>
+  {% endif %}
   {% endfor %}
 </ol>
 {% endif %}
