changing all to load on one page template

--- a/apps/templates/pageall.html
+++ b/apps/templates/pageall.html
@@ -54,8 +54,24 @@
         <br />
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all</a>
         <br />
-
-        
+        {% if page.pid is not None %}
+        <b>Canvas URL:</b> <span class="link" id="myLink"></span>
+        <br />
+        <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
+        <br />{% if user_annotation_count > 0 %}
+        <b>My annotations (this manifest):</b> {{ user_annotation_count }}
+        <br />
+        <b>My annotations (this page):</b> {{ user_annotation_page_count }}
+        <br />{% endif %}
+        {% if user_annotation_count > 0 %}
+        <form action="{% url 'export' volume.pid %}" class="button_to" method="GET"><div><input type="submit" value="Export" title="Export in a variety of formats"/>{% csrf_token %}</div></form>
+        {% endif %}
+<!-- 
+        <p id="test"></p>
+        <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
+        <img src="https://www.cabq.gov/culturalservices/biopark/images/share-on-facebook.png/@@images/image.png" title="Facebook" alt="Facebook" ></a>
+ -->
+        {% endif %}
       </div>
 
       <!-- start ocr el -->
