--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -54,6 +54,7 @@
         <br />
         <b>Stable volume URL:</b> <a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all" target="_blank">https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all</a>
         <br />
+        {% if page.pid is not None %}
         <b>Canvas URL:</b> <span class="link" id="myLink"></span>
         <br />
         <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
@@ -70,7 +71,7 @@
         <a class="facebook" href='http://www.facebook.com/sharer.php?s=100&p[url]=http://{{ request.META.HTTP_HOST }}{{ request.path }}&p[images][0]{{ page.IIIF_IMAGE_SERVER_BASE }}{{ page.pid }}/full/600,/0/default.jpg' target="_blank">
         <img src="https://www.cabq.gov/culturalservices/biopark/images/share-on-facebook.png/@@images/image.png" title="Facebook" alt="Facebook" ></a>
  -->
-        
+        {% endif %}
       </div>
 
       <!-- start ocr el -->
@@ -96,7 +97,7 @@
       "layout": "1x1",
       "data": [
         {
-          "manifestUri": "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ page.manifest.pid }}/manifest", "location": "Emory University"
+          "manifestUri": "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ volume.pid }}/manifest", "location": "Emory University"
         }
       ],
       'windowSettings' : {
@@ -111,13 +112,17 @@
         }
       },
       "windowObjects": [{
-        loadedManifest: "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ page.manifest.pid }}/manifest",
+        loadedManifest: "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ volume.pid }}/manifest",
         annotationLayer: true,
         annotationCreation: true,
-        annotationState: 'annoOncreateOn',
-        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{page.manifest.pid }}/canvas/{{ page.pid }}',
+        annotationState: 'annoOncreateOn',{% if page.pid is not None %}
+        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
         displayLayout: false,
-        sidePanel: false
+        sidePanel: false,
+        {% if page.pid is None %}
+        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
+        viewType: "ThumbnailsView"
+        {% endif %}
       }],
       "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
     });
