--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -61,13 +61,13 @@
 {% if qs1 %}
 <p><strong>The results of the search query in text: {{ request.GET.q }}</strong></p>
 <ul>{% for answer in qs1 %}{% if answer.manifest.label in volume.label %}
-<li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">{{ answer.manifest.label }} - {{ answer.position }}</a></li>
+<li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">Canvas {{ answer.position }}</a></li>
 {% endif %}{% endfor %}</ul>
 {% else %}<p>No results in the text in this volume</p>{% endif %}
 {% if qs2 %}
 <p><strong>The results of the search query in your annotations: {{ request.GET.q }}</strong></p>
 <ul>{% for answer in qs2 %}{% if answer.manifest.label in volume.label %}
-<li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">{{ answer.manifest.label }} - {{ answer.position }}</a></li>
+<li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">Canvas {{ answer.position }}</a></li>
 {% endif %}{% endfor %}</ul>
 {% else %}<p>No results in your annotations in this volume</p>{% endif %}
 </div>
