--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -63,15 +63,16 @@
 <ul>{% for answer in qs1 %}{% if answer.manifest.label in volume.label %}
 <li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">Canvas {{ answer.position }}</a></li>
 {% endif %}{% endfor %}</ul>
-{% else %}<p>No results in the text in this volume</p>{% endif %}
+{% elif request.GET.q  and not qs1 %}<p>No results in the text in this volume</p>{% endif %}
 {% if qs2 %}
 <p><strong>The results of the search query in your annotations: {{ request.GET.q }}</strong></p>
 <ul>{% for answer in qs2 %}{% if answer.manifest.label in volume.label %}
 <li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">Canvas {{ answer.position }}</a></li>
 {% endif %}{% endfor %}</ul>
-{% else %}<p>No results in your annotations in this volume</p>{% endif %}
+{% elif request.GET.q  and not qs1 %}<p>No results in your annotations in this volume</p>
+{% endif %}
 </div>
-        {% if user_annotation_count > 0 %}
+        {% if user_annotation_count > 0 %}<hr />
         <form action="{% url 'export' volume.pid %}" class="button_to" method="GET"><div><input type="submit" value="Export" title="Export in a variety of formats"/>{% csrf_token %}</div></form>
         {% endif %}
 <!-- 
