--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -56,14 +56,14 @@
         <b>Canvas URL:</b> <span class="link" id="myLink"></span>
         <br />
         <b>Stable page URL:</b> <span class="link" id="mySpan"></span>
-        <br /><hr />
+        <br />
 <div>
-{% if qs1 %}
+{% if qs1 %}<hr />
 <p><strong>The results of the search query in text: {{ request.GET.q }}</strong></p>
 <ul>{% for answer in qs1 %}{% if answer.manifest.label in volume.label %}
 <li><a href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer }}" target="_blank">Canvas {{ answer.position }}</a></li>
 {% endif %}{% endfor %}</ul>
-{% elif request.GET.q  and not qs1 %}<p>No results in the text in this volume</p>{% endif %}
+{% elif request.GET.q  and not qs1 %}<hr /><p>No results in the text in this volume</p>{% endif %}
 {% if qs2 %}
 <p><strong>The results of the search query in your annotations: {{ request.GET.q }}</strong></p>
 <ul>{% for answer in qs2 %}{% if answer.manifest.label in volume.label %}
