adjust paddings and margins

--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -3,10 +3,10 @@
 {% load readux_templatetags %}
 
 {% block content %}
-<div class="uk-child-width-expand@s uk-text-left" uk-grid>
+<div class="uk-child-width-expand@s uk-text-left uk-margin-large-top" uk-grid>
   <div>
     <div uk-sticky="bottom: #offset">
-    <ul class="readux-home-tagline uk-padding-remove-left uk-margin-large-bottom uk-margin-large-top">
+    <ul class="readux-home-tagline uk-padding-remove-left uk-margin-large-bottom">
       <li>Read.</li>
       <li>Annotate.</li>
       <li>Publish.</li>
