--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -28,11 +28,11 @@
   <div class="uk-container">
 
     <div class="uk-grid-match" uk-grid>
-      <div class='uk-width-2-3@m'>
-        <div id='viewer'></div>
+      <div class="uk-width-2-3@m">
+        <div id="viewer"></div>
       </div>
-      <div class='uk-width-1-3@m'>
-        <div class='uk-padding uk-padding-remove-left'>
+      <div class="uk-width-1-3@m">
+        <div class="uk-padding uk-padding-remove-left">
 
           <div class="rx-info">
             <div class="rx-info-title">Basic Information</div>
