--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -187,9 +187,14 @@ ol > li {
    page-break-inside: avoid;
 }
 
+ul.listing-thumbs > li > img.thumbnail-image {
+   height: 150px;
+}
+/* 
 ol > li.list {
    #height: 300px;
 }
+ */
 
 ul > li > .collectionbox {
    width: 100%;
