--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -24,7 +24,7 @@
 
     </div>
     <div class='uk-width-1-4'>
-      <div class='uk-padding'>
+      <div class='uk-padding readux-metadata'>
         <b>Author:</b> {{ volume.author }}
         <br />
         <b>Publication Date:</b> {{ volume.published_date }}
@@ -79,7 +79,7 @@
 <script src="{% static 'mirador/mirador.js' %}"></script>
 <script type="text/javascript">
   $(function() {
-    m = Mirador({
+    Mirador({
       "id": "viewer",
       "layout": "1x1",
       "data": [
@@ -89,14 +89,7 @@
       ],
       'windowSettings' : {
         "overlay" : true,
-        "canvasControls": {
-        // "annotations" : {
-        //   "annotationLayer" : true,
-        //   "annotationCreation" : true,
-        //   "annotationState" : 'on',
-        //   "annotationRefresh" : false
-        //   }
-        }
+        "canvasControls": {}
       },
       "windowObjects": [{
         loadedManifest: "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ page.manifest.pid }}/manifest",
@@ -105,6 +98,10 @@
         annotationState: 'annoOncreateOn',
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{page.manifest.pid }}/canvas/{{ page.pid }}'
       }],
+      {% if user.is_anonymous %}
+        "availableAnnotationDrawingTools": [],
+        "availableAnnotationStylePickers": [],
+      {% endif %}
       "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
     });
 
@@ -120,135 +117,8 @@
   });
 
 
-(function($) {
 
-  $.OcrLayer = function(options) {
-
-    jQuery.extend(true, this, {
-      viewer:            null,
-      selected:          null,
-      hovered:           null,
-      windowId:          null,
-      element:           null,
-      eventEmitter:      null
-    }, options);
-
-    this.init();
-  };
-
-  $.OcrLayer.prototype = {
-    init: function() {
-      var _this = this;
-      console.log('this', this);
-    }
-  }
-}(Mirador));
   // UIkit.offcanvas(document.getElementById('offcanvas-flip')).show()
 </script>
-<script>
-// OpenSeadragon SVG Overlay plugin 0.0.5
 
-(function() {
-
-var $ = window.OpenSeadragon;
-
-if (!$) {
-    $ = require('openseadragon');
-    if (!$) {
-        throw new Error('OpenSeadragon is missing.');
-    }
-}
-
-var svgNS = 'http://www.w3.org/2000/svg';
-
-// ----------
-$.Viewer.prototype.readuxSvgOverlay = function() {
-    if (this._readuxSvgOverlayInfo) {
-        return this._readuxSvgOverlayInfo;
-    }
-
-    this._readuxSvgOverlayInfo = new ReaduxOverlay(this);
-    return this._readuxSvgOverlayInfo;
-};
-
-// ----------
-var ReaduxOverlay = function(viewer) {
-    var self = this;
-
-    this._viewer = viewer;
-    this._containerWidth = 0;
-    this._containerHeight = 0;
-
-    this._svg = document.createElementNS(svgNS, 'svg');
-    this._svg.style.position = 'absolute';
-    this._svg.style.left = 0;
-    this._svg.style.top = 0;
-    this._svg.style.width = '100%';
-    this._svg.style.height = '100%';
-    this._viewer.canvas.appendChild(this._svg);
-
-    this._node = document.createElementNS(svgNS, 'g');
-    this._svg.appendChild(this._node);
-
-    this._viewer.addHandler('animation', function() {
-        self.resize();
-    });
-
-    this._viewer.addHandler('open', function() {
-        self.resize();
-    });
-
-    this._viewer.addHandler('rotate', function(evt) {
-        self.resize();
-    });
-
-    this._viewer.addHandler('resize', function() {
-        self.resize();
-    });
-
-    this.resize();
-};
-
-// ----------
-ReaduxOverlay.prototype = {
-    // ----------
-    node: function() {
-        return this._node;
-    },
-
-    // ----------
-    resize: function() {
-        if (this._containerWidth !== this._viewer.container.clientWidth) {
-            this._containerWidth = this._viewer.container.clientWidth;
-            this._svg.setAttribute('width', this._containerWidth);
-        }
-
-        if (this._containerHeight !== this._viewer.container.clientHeight) {
-            this._containerHeight = this._viewer.container.clientHeight;
-            this._svg.setAttribute('height', this._containerHeight);
-        }
-
-        var p = this._viewer.viewport.pixelFromPoint(new $.Point(0, 0), true);
-        var zoom = this._viewer.viewport.getZoom(true);
-        var rotation = this._viewer.viewport.getRotation();
-        // TODO: Expose an accessor for _containerInnerSize in the OSD API so we don't have to use the private variable.
-        var scale = this._viewer.viewport._containerInnerSize.x * zoom;
-        this._node.setAttribute('transform',
-            'translate(' + p.x + ',' + p.y + ') scale(' + scale + ') rotate(' + rotation + ')');
-    },
-
-    // ----------
-    onClick: function(node, handler) {
-        // TODO: Fast click for mobile browsers
-
-        new $.MouseTracker({
-            element: node,
-            clickHandler: handler
-        }).setTracking(true);
-    }
-};
-
-})();
-
-</script>
 {% endblock extra_javascript %}
