--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -516,7 +516,7 @@ ol {
     font-weight: 700;
 }
 
-.readux-card-title {
+.rx-card-title {
     font-size: 1.25em;
     font-weight: 700;
     color: #707070;
@@ -611,4 +611,56 @@ p {
 
 .rx-info-content-value {
     color: #707070;
+}
+
+.rx-article {
+    display: flex;
+    align-items: stretch;
+    flex: 1 1 auto;
+    max-width: 680px;
+    width: 100%;
+    margin: 2rem 0;
+}
+
+.rx-card-body {
+    text-align: left;
+    min-width: 0;
+    flex: 1 1 auto;
+    margin-left: 2rem;
+}
+
+.rx-card-image-container {
+    width: 150px;
+    flex: 0 0 auto;
+}
+
+.rx-card-image {
+    background-origin: border-box!important;
+    background-size: cover!important;
+    width: 100%!important;
+    height: 100%!important;
+    display: block!important;
+    color: inherit;
+    text-decoration: none;
+    background-color: none;
+}
+
+.rx-card-text {
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 3; /* number of lines to show */
+   -webkit-box-orient: vertical;
+}
+
+.rx-card-title {
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 1; /* number of lines to show */
+   -webkit-box-orient: vertical;
+}
+
+.rx-grid-right {
+    overflow:auto
 }
