--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -117,7 +117,7 @@
       "mainMenuSettings" : {
         'show' : false,
         'buttons' : {
-          info: false,
+          info: false
         }
       },
       "layout": "1x1",
@@ -134,11 +134,11 @@
         loadedManifest: "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ volume.pid }}/manifest",
         annotationLayer: true,
         annotationCreation: true,
-        annotationState: 'annoOncreateOn',{% if "/page/all" not in request.get_full_path %}
+        annotationState: 'annoOncreateOn',{% if page.pid is not None %}
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
         displayLayout: false,
         sidePanel: false,
-        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
+        {% if "/page/all" in request.get_full_path %}
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
         viewType: "ThumbnailsView"
         {% endif %}
@@ -146,6 +146,8 @@
       {% if user.is_anonymous %}
         "availableAnnotationDrawingTools": [],
         "availableAnnotationStylePickers": [],
+      {% else %}
+        username: '{{user.get_username}}',
       {% endif %}
       "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
     });
