--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -4,16 +4,15 @@
 
 {% block content %}
 <div class="uk-child-width-expand@s uk-text-left uk-margin-large-top" uk-grid>
-  <div>
-    <div>
-    <ul class="readux-home-tagline uk-padding-remove-left uk-margin-large-bottom">
+  
+  <div class="rx-splash">
+    <ul class="readux-home-tagline uk-padding-remove-left">
       <li>Read.</li>
       <li>Annotate.</li>
       <li>Publish.</li>
     </ul>
-    <p class="uk-margin-large-bottom">Engage with digitized print materials on an open source software platform and share new thinking.</p>
-    <img src="static/images/ecds.svg" class="readux-home-ecds uk-margin-large-top">
-    </div>
+    <p class="">Engage with digitized print materials on an open source software platform and share new thinking.</p>
+    <img src="static/images/ecds.svg" class="readux-home-ecds">
   </div>
 
 
