--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="rx-head-container">
-  <div class="rx-title-container" uk-sticky="offset: 80">
+  <div class="rx-title-container">
     <ul class="rx-breadcrumb">
       <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
       <li class="rx-breadcrumb-item">Volumes</li>
