--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -74,7 +74,9 @@
     <div class="uk-container">
       <nav class="" uk-navbar id="rx-nav">
         <div class="uk-navbar-left">
-          <a class="uk-navbar-item uk-logo uk-padding-remove-left" href="/">Readux</a>
+          <a class="uk-navbar-item uk-logo uk-padding-remove-left" href="/">
+            <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 20px 0 0 0" alt="Readux">
+          </a>
           <ul class="uk-navbar-nav">
             <li>
               {% main_menu %}
