--- a/apps/templates/users/user_detail.html
+++ b/apps/templates/users/user_detail.html
@@ -5,8 +5,8 @@
 
 {% block content %}
   <div class="rx-head-container">
-    <div class="rx-title-container" uk-sticky="offset: 80">
-      <ul class="rx-breadcrumb">
+    <div class="rx-title-container">
+      <ul class="rx-breadcrumb uk-text-truncate">
         <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
         <li class="rx-breadcrumb-item">My Account</li>
       </ul>
