--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -3,7 +3,7 @@
 {% load readux_templatetags %}
 
 {% block content %}
-<div class="uk-child-width-expand@s uk-text-left uk-margin-large-top" uk-grid>
+<div class="uk-child-width-expand@s uk-margin-large-top" uk-grid>
   
   <div class="rx-splash">
     <ul class="readux-home-tagline uk-padding-remove-left">
@@ -16,7 +16,7 @@
   </div>
 
 
-<div class="rx-grid-right">
+<div class="">
 <!-- <h1>{{page.title}}</h1>
 <p class="lead">{{page.tagline}}</p> -->
 
