--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -18,8 +18,8 @@
   </header>
 
   <div class="rx-head-container">
-    <div class="rx-title-container" uk-sticky="offset: 80">
-      <ul class="rx-breadcrumb">
+    <div class="rx-title-container">
+      <ul class="rx-breadcrumb uk-text-truncate">
         <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
         <li class="rx-breadcrumb-item">Collections</li>
         <li class="rx-breadcrumb-item">{{ collection.label }}</li>
@@ -36,7 +36,7 @@
   <div class="uk-grid-match uk-child-width-expand@s uk-grid-large" uk-grid>
     {% for volume in volumes %}
     <div class="uk-width-1-2@m uk-grid-medium">
-      <div class=" uk-width-1-4@m">
+      <div class=" uk-width-1-4@m rx-volume-image">
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
           {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img
             src="{{ canvas.thumbnail }}" {% elif forloop.last %}<img src="{{ volume.canvas_set.first.thumbnail }}"
@@ -46,7 +46,7 @@
       </div>
       <div class="uk-width-3-4@m">
         <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-          <h3 class="readux-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
+          <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
         </a>
         <p>
           <ul class="uk-padding-remove">
