--- a/apps/templates/volume.html
+++ b/apps/templates/volume.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="uk-container">
   <div class="rx-head-container">
-    <div class="rx-title-container" uk-sticky="offset: 80">
-      <ul class="rx-breadcrumb">
+    <div class="rx-title-container">
+      <ul class="rx-breadcrumb uk-text-truncate">
         <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
         <li class="rx-breadcrumb-item">Collections</li>
       </ul>
