User annotations are now returned as an AnnotationList object.  If the user is not authorized to see the annotations, we return 401

--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -146,6 +146,7 @@
       {% if user.is_anonymous %}
         "availableAnnotationDrawingTools": [],
         "availableAnnotationStylePickers": [],
+        "readuxUser": {{ request.user.name }},
       {% endif %}
       "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
     });
